examples/neg/typer/expected_lambdacase_got_args.effekt
def foo { f: ((Int, String)) => Unit }: Unit = f((42, "hello"))

def main() = foo { (n, s) =>
  println(n)
}